feat: auth logics and mongodb, prisma installiation

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://Marian1309:8DLz5TCtK1UFqaz0@cluster.gilyyfz.mongodb.net/mydb"
 
+NEXTAUTH_JWT_SECRET = 'Marian1309Marian1309'
+NEXTAUTH_SECRET = 'Marian13099031nairaM'
