--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "format": "prettier --write .",
     "migrate": "prisma migrate dev",
-    "generate": "prisma generate"
+    "generate": "prisma generate",
+    "dbpush": "prisma db push"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -17,7 +18,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.24.10",
     "axios": "^1.3.4",
-    "daisyui": "^2.51.2",
+    "bcrypt": "^5.1.0",
     "framer-motion": "^10.0.1",
     "next": "13.2.1",
     "next-auth": "^4.19.2",
@@ -33,6 +34,7 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
