--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 DATABASE_URL = "mongodb+srv://Marian1309:8DLz5TCtK1UFqaz0@cluster.gilyyfz.mongodb.net/mydb"
 
-NEXTAUTH_JWT_SECRET = 'Marian1309Marian1309'
-NEXTAUTH_SECRET = 'Marian13099031nairaM'
+NEXTAUTH_JWT_SECRET = "Marian1309Marian1309"
+NEXTAUTH_SECRET = "Marian13099031nairaM"
+
+GITHUB_SECRET = "455634751abfd1081eaf1ff64446f310cff874e0"
+GITHUB_ID = "3511046cd64e64783c58"
+
+GOOGLE_CLIENT_SECRET = "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"
+GOOGLE_CLIENT_ID = "835966089595-fd6rc3kpl7iqe13l12badjas14jhfh26.apps.googleusercontent.com"
