--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "prisma": "^4.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "react-type-animation": "^2.1.2",
+    "sharp": "^0.31.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
